--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
